# minisketch-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  gen-examples.sh
.cargo/: config
.github/: dependabot.yml
examples/: bisect.rs  simple.rs
src/: lib.rs  main.rs
src/examples/: _00_simple.rs  _01_bisect.rs  mod.rs
