[package]
name = "minisketch-rs"
version = "0.1.0"
authors = ["Evgenii P. <eupn@protonmail.com>"]
edition = "2018"
links = "minisketch"
build = "build.rs"
keywords = ["minisketch", "set", "reconciliation"]
categories = ["ffi", "math"]

[dependencies]
libc = "0.2.51"

[build-dependencies]
bindgen = "0.49.0"
cc = "1.0"
