[package]
name = "minisketch-rs"
version = "0.1.2" # remember to update html_root_url
authors = ["Evgenii P. <eupn@protonmail.com>"]
description = "Rust interface to Pieter Wuille's minisketch library for efficient set reconciliation"
edition = "2018"
links = "minisketch"
build = "build.rs"
keywords = ["minisketch", "set", "reconciliation"]
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/eupn/minisketch-rs"
license = "Apache-2.0"

[dependencies]
libc = "0.2.51"

[build-dependencies]
bindgen = "0.49.0"
cc = "1.0"
